@@ -24,6 +24,8 @@ This is the first bug fix/maintenance release of Commons Transaction 1.1.
 ENHANCEMENTS FROM 1.1
 ---------------------
 - Better error reporting in FileHelper when destination directories (moveRec) or files (copyRec) could not be created
+- Added functions to FileResourceManager for copying and moving resources.
+- Added possibility to append to (instead of overwriting) an existing resource with writeResource in FileResourceManager.
 
 BUGFIXES FROM 1.1
 -----------------
